; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/butterstick/extr_sten.c_REPEAT.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/butterstick/extr_sten.c_REPEAT.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cMode = common dso_local global i64 0, align 8
@QWERTY = common dso_local global i64 0, align 8
@repeatFlag = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @REPEAT() #0 {
  %1 = load i64, i64* @cMode, align 8
  %2 = load i64, i64* @QWERTY, align 8
  %3 = icmp ne i64 %1, %2
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  br label %6

5:                                                ; preds = %0
  store i32 1, i32* @repeatFlag, align 4
  br label %6

6:                                                ; preds = %5, %4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
